# nus-iss

./: README.md
day04/base/: config.yaml  ingress.yaml  kustomization.yaml  service.yaml
day04/overlays/dev/: kustomization.yaml
pre-assessment/: pyproject.toml  service.py
pre-assessment/static/: style.css
workshop01/: pyproject.toml  web.py
workshop01/golang/: Dockerfile
workshop01/task1/: Dockerfile  devfile.yaml  main.js  package.json
workshop01/task2/: docker-compose.yml  steps.sh
workshop01/templates/: index.html
workshop02/: app.yaml  db.yaml
workshop03/: config.yaml  deployment.yaml  ingress.yaml  volume.yaml
workshop04/base/: ingress.yaml  kustomization.yaml  service.yaml  sts.yaml
workshop04/overlays/: apply.yaml
workshop04/overlays/dev/: kustomization.yaml
