[tool.poetry]
name = "workshop01"
version = "0.1.0"
description = ""
authors = ["gohchunteck"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
